--- a/app/views/add.scala.html
+++ b/app/views/add.scala.html
@@ -1,4 +1,4 @@
-@()
+@(price: List[Price])
 
 @main("Add") {
 
@@ -8,22 +8,25 @@
         <h2 class="text-center">Add new computer</h2>
         <form class="@routes.Compyuters.add()" method="post">
             <div class="form-group">
-                <label for="inp-name">Mode</label>
-                <input type="text" class="form-control" id="inp-name"
-                name="mode" required="">
-            </div>
-            <div class="form-group">
-                <label for="inp-desc">cpu</label>
-                <textarea type="text" class="form-control" id="inp-desc"
+                <label for="inp-cpu">cpu</label>
+                <textarea type="text" class="form-control" id="inp-cpu"
                 name="cpu" required=""></textarea>
             </div>
             <div class="form-group">
-                <label for="inp-country">mark</label>
-                <input type="text" class="form-control" id="inp-country"
-                name="mark" required="">
+                <label for="inp-mode">Mode</label>
+                <input type="text" class="form-control" id="inp-mode"
+                name="mode" required="">
             </div>
+            <div class="form-group">
+                <label for="inp-mode">Mode</label>
+                <select name="mode" class="form-control" id="inp-mode">
+                    @for(price <- price){
+                    <option value="@price.id">@price.mode</option>
+                }
 
-            <button type="number" class="btn btn-primary">Submit</button>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 }
