--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -15,6 +15,8 @@
                 <li class="@if(activePage == "list"){active}"><a href="@routes.Compyuters.list()"><strong>MODERN TECHNOLOGIES</strong></a></li>
                 <li class="@if(activePage == ""){active}"><a href=""><strong>FOR CLIENTS</strong></a></li>
                 <li class="@if(activePage == "add"){active}"><a href="@routes.Compyuters.showAddForm()"><strong>ADD</strong></a></li>
+                <li class="@if(activePage == "List"){active}"><a href="@routes.Prices.list()"><strong>List</strong></a></li>
+                <li class="@if(activePage == "add price"){active}"><a href="@routes.Prices.add()"><strong>ADD Price</strong></a></li>
             </ul>
         </div>
         <div class="collapse navbar-collapse navbar-right">
